# crossui

./: CMakeLists.txt  README.md  vcpkg.json
crossui/: CMakeLists.txt
crossui/include/: App.hpp  Button.hpp  GraphicsUtils.hpp  Group.hpp  Rectangle.hpp  Widget.hpp
crossui/src/: App.cc  Button.cc  Group.cc  Rectangle.cc
main/: CMakeLists.txt
main/src/: main.cpp
res/: config.cmake  config.h.in
